--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,22 @@
 [tool.poetry]
 name = "kaioretry"
-version = "0.1.0"
+version = "0.1.3"
 description = "All in one retry and aioretry decorators"
 authors = ["Damien Nadé <anvil.github+kaioretry@livna.org>"]
-license = "LPGL"
+license = "LGPL-2.1-or-later"
+repository = "https://github.com/Anvil/kaioretry/"
+readme = "README.md"
+keywords = ["retry", "decorator", "asyncio"]
+documentation = "https://kaioretry.readthedocs.io/en/latest/"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Framework :: AsyncIO",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Software Development"
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
