--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
+decorator = ">=5.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = ">6"
