--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ pytest = ">6"
 pytest-asyncio = "^0.20"
 pytest-mock = "^3.10"
 pytest-cases = "^3.6"
-pytest-cov = ">4"
+pytest-cov = ">=4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
