ensure dependencies are installed on readthedocs before building the documentation

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,3 +10,10 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
+  jobs:
+    pre_build:
+      # We should actually do that, but, for time-saving purpose,
+      # let's just install decorator.
+      # - pip install poetry
+      # - poetry update
+      - pip install decorator
