use pip to install dependencies on rtd

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,8 +12,5 @@ build:
     python: "3.11"
   jobs:
     pre_build:
-      # We should actually do that, but, for time-saving purpose,
-      # let's just install decorator.
-      # - pip install poetry
-      # - poetry update
-      - pip install decorator
+      - pip install poetry
+      - poetry install --with sphinx
