--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.10"
 decorator = ">=5.1.1"
+typing_extensions = ">=4.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = ">6"
