--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 python = "^3.10"
 decorator = ">=5.1.1"
 typing_extensions = ">=4.5.0"
+mypy_extensions = ">=1"
 
 [tool.poetry.dev-dependencies]
 pytest = ">6"
