--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,17 @@ readme = "README.md"
 keywords = ["retry", "decorator", "asyncio"]
 documentation = "https://kaioretry.readthedocs.io/en/latest/"
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Framework :: AsyncIO",
     "Intended Audience :: Developers",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.10",
-    "Topic :: Software Development"
+    "Topic :: Software Development",
+    "Typing :: Typed"
 ]
 
 [tool.poetry.dependencies]
