--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,9 +38,9 @@ pytest-cov = ">=4"
 optional = true
 
 [tool.poetry.group.sphinx.dependencies]
-sphinx = ">=5"
+sphinx = ">=7"
 sphinx-autodoc-typehints = ">=1.17"
-sphinx-rtd-theme = "*"
+sphinx-rtd-theme = ">=2"
 
 [build-system]
 requires = ["poetry-core>=1.4.0"]
