--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint poetry
-        poetry install --no-root
+        poetry install --no-root --with dev
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py' | grep -vE 'docs/source/conf.py|test/static_analysis')
