--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,3 +74,7 @@ warn_return_any = true
 warn_unreachable = true
 disallow_untyped_decorators = true
 packages = ["kaioretry", "test.static_analysis"]
+
+[tool.black]
+line-length = 79
+include = '\.pyi?$'
